# MultiSig

./: .gitignore  README.md  dfx.json  package.json
artifacts/btc_wallet/: btc_wallet.auto.did  btc_wallet.did  btc_wallet_opt.wasm  dfx.json
artifacts/ms_controller/: dfx.json  ms_controller.auto.did  ms_controller.did  ms_controller_opt.wasm
artifacts/ms_provider/: canister_ids.json  dfx.json  ms_provider.auto.did  ms_provider.did  ms_provider_opt.wasm
canisters/: Cargo.toml
canisters/controller/ms_controller/: dfx.sh
canisters/controller/ms_controller/actor/: Cargo.toml
canisters/controller/ms_controller/actor/src/: actor.rs  lib.rs  main.rs
canisters/controller/ms_controller/mod/: Cargo.toml
canisters/controller/ms_controller/mod/src/: app_wallet.rs  ego_types.rs  mod.rs  model.rs  service.rs  state.rs  types.rs
canisters/controller/ms_controller/mod/tests/: service_test.rs
canisters/dapp/btc_wallet/actor/: Cargo.toml
canisters/dapp/btc_wallet/actor/src/: actor.rs  lib.rs  main.rs
canisters/dapp/btc_wallet/mod/: Cargo.toml
canisters/dapp/btc_wallet/mod/src/: bitcoin_api.rs  bitcoin_wallet.rs  ecdsa_api.rs  mod.rs  service.rs  types.rs
canisters/dapp/btc_wallet/mod/src/btc/: bitcoin_api.rs  bitcoin_service.rs  bitcoin_wallet.rs  mod.rs
canisters/dapp/btc_wallet/mod/src/evm/: mod.rs
canisters/dapp/btc_wallet/mod/src/web3/: confirm.rs  error.rs  helpers.rs  mod.rs  signing.rs
canisters/dapp/btc_wallet/mod/src/web3/api/: accounts.rs  eth.rs  eth_filter.rs  eth_subscribe.rs  mod.rs  net.rs  parity.rs  parity_accounts.rs  parity_set.rs  personal.rs  traces.rs  txpool.rs  web3.rs
canisters/dapp/btc_wallet/mod/src/web3/contract/: deploy.rs  error.rs  mod.rs  tokens.rs
canisters/dapp/btc_wallet/mod/src/web3/contract/ens/: eth_ens.rs  mod.rs
canisters/dapp/btc_wallet/mod/src/web3/transports/: batch.rs  either.rs  ic_http.rs  mod.rs  test.rs
canisters/dapp/btc_wallet/mod/src/web3/types/: block.rs  fee_history.rs  log.rs  proof.rs  recovery.rs  signed.rs  sync_state.rs  trace_filtering.rs  traces.rs  transaction.rs  transaction_id.rs  transaction_request.rs  txpool.rs  uint.rs  work.rs
canisters/helpers/tecdsa_signer/: Cargo.toml
canisters/helpers/tecdsa_signer/src/: curve.rs  hash.rs  mod.rs  service.rs  signer.rs  state.rs  types.rs  utils.rs
canisters/provider/ms_provider/actor/: Cargo.toml
canisters/provider/ms_provider/actor/src/: actor.rs  lib.rs  main.rs
canisters/provider/ms_provider/mod/: Cargo.toml
canisters/provider/ms_provider/mod/src/: ego_store.rs  mod.rs  model.rs  ms_controller.rs  service.rs  state.rs  types.rs
canisters/provider/ms_provider/mod/tests/: service_test.rs
clients/ego/: ego_dev.d.ts  ego_dev.idl.ts  ego_local.d.ts  ego_local.idl.ts  ego_ops.d.ts  ego_ops.idl.ts  ego_store.d.ts  ego_store.idl.ts  ego_tenant.d.ts  ego_tenant.idl.ts
clients/fixtures/: assets_storage.did  dfx.json  generate.ts  identities.json  identities2.json
clients/frontend/: .env.production  .env.staging  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
clients/frontend/src/: index.css  index.less  main.tsx
clients/frontend/src/canisters/: ego_bucket.idl.js  ego_crond.idl.js  ego_file.idl.js  ego_ledger.idl.js  ego_store.idl.js  ego_wallet.idl.js
clients/frontend/src/components/Access/: context.ts  index.tsx  runtime.tsx
clients/frontend/src/components/Createform/: Createform.tsx
clients/frontend/src/components/Guide/: Guide.tsx
clients/frontend/src/components/Markdown/: index.tsx
clients/frontend/src/components/RightContent/: AvatarDropdown.tsx  index.module.less  index.tsx
clients/frontend/src/components/WangEdit/: index.tsx
clients/frontend/src/layout/: UserLayout.tsx
clients/frontend/src/models/: app.ts  btc.ts  controller.ts  global.ts
clients/frontend/src/pages/: index.tsx
clients/frontend/src/pages/Access/: index.tsx
clients/frontend/src/pages/group/: Create.tsx  List.tsx  Setting.tsx
clients/frontend/src/pages/wallet/: AddressBook.tsx  Assets.tsx  Transactions.tsx  WalletCreate.tsx
clients/frontend/src/routes/: Router.tsx  routes.tsx
clients/frontend/src/services/: index.ts  metamask.ts
clients/frontend/src/services/api/: index.ts  path.ts  typings.d.ts
clients/frontend/src/services/connection/: base.ts  bucket.ts  store.ts  wallet.ts
clients/frontend/src/services/request/: index.ts
clients/frontend/src/store/: models.ts
clients/frontend/src/utils/: constants.ts  converter.ts  dict.ts  index.ts  types.ts
clients/idls/: btc_wallet.d.ts  btc_wallet.idl.ts  cycle_wallet.d.ts  cycle_wallet.idl.ts  ledger.d.ts  ledger.idl.ts  management.d.ts  management.idl.ts  ms_controller.d.ts  ms_controller.idl.ts  ms_provider.d.ts  ms_provider.idl.ts
clients/post_install/: post_install.test.ts
clients/scripts/: script.test.ts
clients/settings/: agent.ts  env.ts
configs/: btc_wallet.json  ego_ops.json  ego_store.json  ii_config.json  ms_controller.json  ms_provider.json  nns_config.json
scripts/: builder.ts  config.ts  deployer.ts  ic_deployer.ts
scripts/settings/: agent.ts
