[package]
name = "ms_controller"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ms-controller"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
astrox_macros = "0.2.2"
ego_lib = {path="../../../../../ego_lib"}
ms_controller_mod = { path = "../mod" }
