[package]
name = "ms_controller"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ms-controller"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ms_controller_mod = { path = "../mod" }

ego_lib = "0.3.12"
ego_macros = "0.1.13"
ego_types = "0.1.6"

#ego_lib = {path="../../../../../ego/ego/lib/ego_lib"}
#ego_macros = {path="../../../../../ego/ego/lib/ego_macros"}
#ego_types = {path="../../../../../ego/ego/lib/ego_types"}