[package]
name = "ms_controller_mod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
async-trait = "0.1.57"
ego_lib = "0.2.13"
astrox_macros = "0.2.10"

[dev-dependencies]
mockall = "0.11.2"
tokio = { version = "1.21.0", features = ["full"] }