[package]
name = "btc_wallet"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "btc-wallet"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
btc_wallet_mod = { path = "../mod" }
ic-btc-types = { git = "https://github.com/dfinity/ic", rev = "c905ede6e62f167994de24c8ccf7ee37a4d8ac67" }
tecdsa_signer = { path = "../../../helpers/tecdsa_signer" }
ego_lib = "0.3.3"
ego_macros = "0.1.4"
ego_types = "0.1.2"