[package]
name = "btc_wallet_mod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
bitcoin = {version = "0.28.1", features = ["use-serde"]}
byteorder = "1.4.3"
hex = "0.4.3"
ic-btc-types = { git = "https://github.com/dfinity/ic", rev = "c905ede6e62f167994de24c8ccf7ee37a4d8ac67" }
ic-stable-structures = "0.3.0"
lazy_static = "1.4.0"
serde = "1.0.132"
serde_bytes = "0.11"
thousands = "0.2.0"
sha2 = "0.10.6"
ripemd = "0.1.1"
bs58 = "0.4.0"
serde_json = "1.0"
ego_lib = "0.2.1"

[features]
file_memory = []
