[package]
name = "btc_wallet_mod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/mod.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.29.1", features = ["serde"] }
byteorder = "1.4.3"
candid = "0.8.4"
hex = "0.4.3"
ic-btc-types = { git = "https://github.com/dfinity/ic", rev = "c905ede6e62f167994de24c8ccf7ee37a4d8ac67" }
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
ic-stable-structures = "0.3.0"
lazy_static = "1.4.0"
serde = "1.0.132"
serde_bytes = "0.11"
thousands = "0.2.0"
sha2 = "0.10.6"
ripemd = "0.1.1"
bs58 = "0.4.0"
serde_json = "1.0"
tecdsa_signer = { path = "../../../helpers/tecdsa_signer" }
itertools = "0.10.5"
arrayvec = "0.7.1"
derive_more = "0.99.1"
ethabi = "17.0.0"
ethereum-types = "0.13.0"
libsecp256k1 = { version = "0.7.1", features = ["lazy-static-context"] }
futures = "0.3.5"
futures-timer = "3.0.2"
#idna = "0.2"
jsonrpc-core = "18.0.0"
#log = "0.4.6"
parking_lot = "0.12.0"
rlp = "0.5"
tiny-keccak = { version = "2.0.1", features = ["keccak"] }
pin-project = "1.0"
getrandom= {version ="0.2.8", features= ["js"]}

ego_lib = "0.3.12"
ego_macros = "0.1.13"
ego_types = "0.1.6"

#ego_lib = {path="../../../../../ego/ego/lib/ego_lib"}
#ego_macros = {path="../../../../../ego/ego/lib/ego_macros"}
#ego_types = {path="../../../../../ego/ego/lib/ego_types"}

[features]
file_memory = []
