[package]
name = "ms_provider"
version = "0.1.0"
edition = "2021"


[lib]
path = "src/actor.rs"
crate-type = ["cdylib"]

[[bin]]
name = "ms-provider"
path = "src/main.rs"

[dependencies]
candid = "0.8.4"
ic-cdk = "0.6.8"
ic-cdk-macros = "0.6.8"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11"
ms_provider_mod = { path = "../mod" }

ego_lib = "0.3.8"
ego_macros = "0.1.7"
ego_types = "0.1.4"

#ego_lib = {path="../../../../../ego/ego/lib/ego_lib"}
#ego_macros = {path="../../../../../ego/ego/lib/ego_macros"}
#ego_types = {path="../../../../../ego/ego/lib/ego_types"}